# efm32-base

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  README.md  armenv.sh  makefile  rust.cmake  test.sh
device/: CMakeLists.txt  device.cmake
device/BGM1/Include/: bgm111a256v2.h  bgm111e256v2.h  bgm113a256v2.h  bgm11s12f256ga.h  bgm11s22f256ga.h  bgm121a256v2.h  bgm121n256v2.h  bgm123a256v2.h  bgm123n256v2.h  bgm1_acmp.h  bgm1_adc.h  bgm1_af_pins.h  bgm1_af_ports.h  bgm1_cmu.h  bgm1_cryotimer.h  bgm1_crypto.h  bgm1_devinfo.h  bgm1_dma_descriptor.h  bgm1_dmareq.h  bgm1_emu.h  bgm1_fpueh.h  bgm1_gpcrc.h  bgm1_gpio.h  bgm1_gpio_p.h  bgm1_i2c.h  bgm1_idac.h  bgm1_ldma.h  bgm1_ldma_ch.h  bgm1_letimer.h  bgm1_leuart.h  bgm1_msc.h  bgm1_pcnt.h  bgm1_prs.h  bgm1_prs_ch.h  bgm1_prs_signals.h  bgm1_rmu.h  bgm1_romtable.h  bgm1_rtcc.h  bgm1_rtcc_cc.h  bgm1_rtcc_ret.h  (+6 more)
device/BGM13/Include/: bgm13_acmp.h  bgm13_adc.h  bgm13_af_pins.h  bgm13_af_ports.h  bgm13_cmu.h  bgm13_cryotimer.h  bgm13_crypto.h  bgm13_csen.h  bgm13_devinfo.h  bgm13_dma_descriptor.h  bgm13_dmareq.h  bgm13_emu.h  bgm13_etm.h  bgm13_fpueh.h  bgm13_gpcrc.h  bgm13_gpio.h  bgm13_gpio_p.h  bgm13_i2c.h  bgm13_idac.h  bgm13_ldma.h  bgm13_ldma_ch.h  bgm13_lesense.h  bgm13_lesense_buf.h  bgm13_lesense_ch.h  bgm13_lesense_st.h  bgm13_letimer.h  bgm13_leuart.h  bgm13_msc.h  bgm13_pcnt.h  bgm13_prs.h  bgm13_prs_ch.h  bgm13_prs_signals.h  bgm13_rmu.h  bgm13_romtable.h  bgm13_rtcc.h  bgm13_rtcc_cc.h  bgm13_rtcc_ret.h  bgm13_smu.h  bgm13_timer.h  bgm13_timer_cc.h  (+15 more)
device/BGM21/Include/: bgm210l022jif1.h  bgm210l022jif2.h  bgm210l022jnf1.h  bgm210l022jnf2.h  bgm210la22jif1.h  bgm210la22jif2.h  bgm210la22jnf1.h  bgm210la22jnf2.h  bgm210p022jia1.h  bgm210p022jia2.h  bgm210p022jna2.h  bgm210p032jia1.h  bgm210p032jia2.h  bgm210p032jna2.h  bgm210pa22jia1.h  bgm210pa22jia2.h  bgm210pa22jna2.h  bgm210pa32jia1.h  bgm210pa32jia2.h  bgm210pa32jna2.h  bgm21_acmp.h  bgm21_aes.h  bgm21_agc.h  bgm21_amuxcp.h  bgm21_bufc.h  bgm21_buram.h  bgm21_burtc.h  bgm21_cmu.h  bgm21_devinfo.h  bgm21_dma_descriptor.h  bgm21_dpll.h  bgm21_emu.h  bgm21_frc.h  bgm21_fsrco.h  bgm21_gpcrc.h  bgm21_gpio.h  bgm21_gpio_port.h  bgm21_hfrco.h  bgm21_hfxo.h  bgm21_i2c.h  (+27 more)
device/BGM21/Source/: system_bgm21.c
device/EFM32G/Include/: efm32g200f16.h  efm32g200f32.h  efm32g200f64.h  efm32g210f128.h  efm32g222f128.h  efm32g222f32.h  efm32g222f64.h  efm32g230f128.h  efm32g230f32.h  efm32g230f64.h  efm32g232f128.h  efm32g232f32.h  efm32g232f64.h  efm32g280f128.h  efm32g280f32.h  efm32g280f64.h  efm32g290f128.h  efm32g290f32.h  efm32g290f64.h  efm32g800f128.h  efm32g840f128.h  efm32g840f32.h  efm32g840f64.h  efm32g842f128.h  efm32g842f32.h  efm32g842f64.h  efm32g880f128.h  efm32g880f32.h  efm32g880f64.h  efm32g890f128.h  efm32g890f32.h  efm32g890f64.h  efm32g_acmp.h  efm32g_adc.h  efm32g_aes.h  efm32g_af_pins.h  efm32g_af_ports.h  efm32g_calibrate.h  efm32g_cmu.h  efm32g_dac.h  (+30 more)
device/EFM32G/Source/: system_efm32g.c
device/EFM32GG/Include/: efm32gg230f1024.h  efm32gg230f512.h  efm32gg232f1024.h  efm32gg232f512.h  efm32gg280f1024.h  efm32gg280f512.h  efm32gg290f1024.h  efm32gg290f512.h  efm32gg295f1024.h  efm32gg295f512.h  efm32gg330f1024.h  efm32gg330f512.h  efm32gg332f1024.h  efm32gg332f512.h  efm32gg380f1024.h  efm32gg380f512.h  efm32gg390f1024.h  efm32gg390f512.h  efm32gg395f1024.h  efm32gg395f512.h  efm32gg840f1024.h  efm32gg840f512.h  efm32gg842f1024.h  efm32gg842f512.h  efm32gg880f1024.h  efm32gg880f512.h  efm32gg890f1024.h  efm32gg890f512.h  efm32gg895f1024.h  efm32gg895f512.h  efm32gg900f1024.h  efm32gg900f512.h  efm32gg940f1024.h  efm32gg940f512.h  efm32gg942f1024.h  efm32gg942f512.h  efm32gg980f1024.h  efm32gg980f512.h  efm32gg990f1024.h  efm32gg990f512.h  (+51 more)
device/EFM32GG/Source/: system_efm32gg.c
device/EFM32GG11B/Include/: efm32gg11b_acmp.h  efm32gg11b_adc.h  efm32gg11b_af_pins.h  efm32gg11b_af_ports.h  efm32gg11b_can.h  efm32gg11b_can_mir.h  efm32gg11b_cmu.h  efm32gg11b_cryotimer.h  efm32gg11b_crypto.h  efm32gg11b_csen.h  efm32gg11b_devinfo.h  efm32gg11b_dma_descriptor.h  efm32gg11b_dmareq.h  efm32gg11b_ebi.h  efm32gg11b_emu.h  efm32gg11b_eth.h  efm32gg11b_etm.h  efm32gg11b_fpueh.h  efm32gg11b_gpcrc.h  efm32gg11b_gpio.h  efm32gg11b_gpio_p.h  efm32gg11b_i2c.h  efm32gg11b_idac.h  efm32gg11b_lcd.h  efm32gg11b_ldma.h  efm32gg11b_ldma_ch.h  efm32gg11b_lesense.h  efm32gg11b_lesense_buf.h  efm32gg11b_lesense_ch.h  efm32gg11b_lesense_st.h  efm32gg11b_letimer.h  efm32gg11b_leuart.h  efm32gg11b_msc.h  efm32gg11b_pcnt.h  efm32gg11b_perpriv_register.h  efm32gg11b_prs.h  efm32gg11b_prs_ch.h  efm32gg11b_prs_signals.h  efm32gg11b_qspi.h  efm32gg11b_rmu.h  (+23 more)
device/EFM32GG11B/Source/: system_efm32gg11b.c
device/EFM32GG12B/Include/: efm32gg12b_acmp.h  efm32gg12b_adc.h  efm32gg12b_af_pins.h  efm32gg12b_af_ports.h  efm32gg12b_can.h  efm32gg12b_can_mir.h  efm32gg12b_cmu.h  efm32gg12b_cryotimer.h  efm32gg12b_crypto.h  (+53 more)
emlib/: CMakeLists.txt  Changes_emlib.txt  emlib.cmake
emlib/inc/: em_acmp.h  em_adc.h  em_aes.h  em_assert.h  em_burtc.h  em_bus.h  em_can.h  em_chip.h  em_cmu.h  em_common.h  em_core.h  em_cryotimer.h  em_crypto.h  em_csen.h  em_dac.h  em_dbg.h  em_dma.h  em_ebi.h  em_emu.h  em_eusart.h  em_gpcrc.h  em_gpio.h  em_i2c.h  em_iadc.h  em_idac.h  em_int.h  em_lcd.h  em_ldma.h  em_lesense.h  em_letimer.h  em_leuart.h  em_mpu.h  em_msc.h  em_opamp.h  em_pcnt.h  em_pdm.h  em_prs.h  em_qspi.h  em_ramfunc.h  em_rmu.h  (+11 more)
emlib/src/: em_acmp.c  em_adc.c  em_aes.c  em_assert.c  em_burtc.c  em_can.c  em_cmu.c  em_core.c  em_cryotimer.c  em_crypto.c  em_csen.c  em_dac.c  em_dbg.c  em_dma.c  em_ebi.c  em_emu.c  em_eusart.c  em_gpcrc.c  em_gpio.c  em_i2c.c  em_iadc.c  em_idac.c  em_int.c  em_lcd.c  em_ldma.c  em_lesense.c  em_letimer.c  em_leuart.c  em_mpu.c  em_msc.c  em_opamp.c  em_pcnt.c  em_pdm.c  em_prs.c  em_qspi.c  em_rmu.c  em_rtc.c  em_rtcc.c  em_se.c  em_system.c  (+5 more)
hardware/: CMakeLists.txt  hardware.cmake
hardware/kit/: hwconf.xml
protocol/: CMakeLists.txt  protocol.cmake
protocol/flex_1.2/: esf.properties
rs/: Cargo.toml  build.rs
rs/src/: lib.rs
(+3999 files in other folders)
